test(inventory): cover corrected bulk snapshot import (#231)